--- a/.github/workflows/constraints.yml
+++ b/.github/workflows/constraints.yml
@@ -24,6 +24,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.9"
+      - uses: hynek/setup-cached-uv@v2
       - run: pip install uv
       - run: uv pip compile binder/requirements.in -o binder/requirements.txt --no-annotate --strip-extras --upgrade
       - run: uv pip compile requirements.in -o requirements.txt --no-annotate --strip-extras --upgrade
