--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.9"
+      - uses: hynek/setup-cached-uv@v2
       - name: Install dependencies
         run: |
           sudo apt-get -y install graphviz
