--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,7 @@ arrow==1.3.0
 asttokens==2.4.1
 async-lru==2.0.4
 attrs==24.2.0
-babel==2.15.0
-backcall==0.2.0
+babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
 cachetools==5.4.0
@@ -21,7 +20,7 @@ chardet==5.2.0
 charset-normalizer==3.3.2
 colorama==0.4.6
 comm==0.2.2
-contourpy==1.1.1
+contourpy==1.2.1
 cycler==0.12.1
 debugpy==1.8.5
 decorator==5.1.1
@@ -41,7 +40,7 @@ idna==3.7
 importlib-metadata==8.2.0
 importlib-resources==6.4.0
 ipykernel==6.29.5
-ipython==8.12.3
+ipython==8.18.1
 ipywidgets==8.1.3
 isoduration==20.11.0
 jedi==0.19.1
@@ -63,7 +62,7 @@ jupyterlab-server==2.27.3
 jupyterlab-widgets==3.0.11
 kiwisolver==1.4.5
 markupsafe==2.1.5
-matplotlib==3.7.5
+matplotlib==3.9.1.post1
 matplotlib-inline==0.1.7
 mistune==3.0.2
 nbclient==0.10.0
@@ -72,18 +71,16 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 nodeenv==1.9.1
 notebook-shim==0.2.4
-numpy==1.24.4
+numpy==2.0.1
 overrides==7.7.0
 packaging==24.1
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
-pickleshare==0.7.5
 pillow==10.4.0
-pkgutil-resolve-name==1.3.10
 platformdirs==4.2.2
 pluggy==1.5.0
-pre-commit==3.5.0
+pre-commit==3.8.0
 prometheus-client==0.20.0
 prompt-toolkit==3.0.47
 psutil==6.0.0
@@ -95,7 +92,6 @@ pyparsing==3.1.2
 pyproject-api==1.7.1
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
-pytz==2024.1
 pyyaml==6.0.2
 pyzmq==26.1.0
 referencing==0.35.1
@@ -103,7 +99,7 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.20.0
-ruff==0.5.6
+ruff==0.5.7
 send2trash==1.8.3
 setuptools==72.1.0
 six==1.16.0
@@ -114,7 +110,7 @@ terminado==0.18.1
 tinycss2==1.3.0
 tomli==2.0.1
 tornado==6.4.1
-tox==4.17.0
+tox==4.17.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240316
 typing-extensions==4.12.2
