--- a/tox.ini
+++ b/tox.ini
@@ -6,23 +6,21 @@ skip_install = True
 skip_missing_interpreters = True
 skipsdist = True
 
+[testenv]
+passenv = *
+
 [testenv:nb]
 allowlist_externals =
   pytest
 commands =
   pytest {posargs}
-description =
-  Run all notebooks with pytest
-passenv =
-  *
+description = Run all notebooks with pytest
 
 [testenv:sty]
 allowlist_externals =
   pre-commit
 commands =
-  pre-commit run {posargs} -a
-passenv =
-  *
+  pre-commit run {posargs} --all-files
 
 [testenv:update]
 allowlist_externals =
@@ -30,7 +28,4 @@ allowlist_externals =
 commands =
   uv pip compile requirements.in -o requirements.txt --no-annotate --strip-extras --upgrade
   uv pip compile binder/requirements.in -o binder/requirements.txt --no-annotate --strip-extras --upgrade
-description =
-  Update all pip constraint files`
-passenv =
-  *
+description = Update all pip constraint files
