--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
     hooks:
       - id: check-dev-files
         args:
+          - --dev-python-version=3.9
           - --no-cd
           - --no-cspell-update
           - --no-github-actions
