--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
       - id: check-dev-files
         args:
           - --dev-python-version=3.11
+          - --doc-apt-packages=graphviz
           - --no-cd
           - --no-cspell-update
           - --no-github-actions
