--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,19 +6,22 @@ name = "compwa-demo"
 requires-python = ">=3.12"
 version = "0.0.0"
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
-    "compwa-demo[binder]",
-    "jupyterlab",
-    "jupyterlab-code-formatter >=3.0.0",
-    "jupyterlab-git",
-    "jupyterlab-lsp",
     "nbmake",
     "pyproject-local-kernel",
     "pytest",
+    "ruff",
+    {include-group = "jupyter"},
+]
+jupyter = [
+    "jupyterlab",
+    "jupyterlab-code-formatter",
+    "jupyterlab-git",
+    "jupyterlab-lsp",
+    "jupyterlab-myst",
     "python-lsp-ruff",
     "python-lsp-server[rope]",
-    "ruff",
 ]
 
 [tool.pytest.ini_options]
