--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
     "github.vscode-github-actions",
+    "github.vscode-pull-request-github",
     "mhutchie.git-graph",
     "ms-python.python",
     "ms-vsliveshare.vsliveshare",
