--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
   },
   "notebook.formatOnSave.enabled": true,
   "python.analysis.autoImportCompletions": false,
+  "python.defaultInterpreterPath": ".venv/bin/python",
   "python.languageServer": "Pylance",
   "python.terminal.activateEnvironment": false,
   "python.testing.unittestEnabled": false,
